# adpcm

./: .gitignore  CMakeLists.txt  LICENSE  README
inc/adpcm/: adpcm.h
src/: adpcm.c
